Refactor authentication flow and add GitHub email fetching functionality